Changes to fields and fixed reset button

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,6 +42,11 @@
   
 }
 
+/* .resetbutton{
+  color:white;
+  background-color: white;
+} */
+
 .ShowBookDetails {
   background-color: #914792;
   min-height: 100vh;
